[gd_scene load_steps=28 format=3 uid="uid://ct31my6k01xyh"]

[ext_resource type="Script" path="res://Enemies/bounty_1.gd" id="1_3wpkc"]
[ext_resource type="Script" path="res://health_component.gd" id="2_wqkl3"]
[ext_resource type="PackedScene" uid="uid://cx65mwov3fgjd" path="res://UI/OnScreenInfo/health_bar.tscn" id="3_ut44i"]
[ext_resource type="PackedScene" uid="uid://cbdpjw3txwo5h" path="res://Enemies/enemy_stats.tscn" id="4_yq3dr"]
[ext_resource type="Shader" path="res://Shaders/damageFlash.gdshader" id="5_qf84c"]
[ext_resource type="Texture2D" uid="uid://cts47eo6n4sla" path="res://Assets/Ship_4.png" id="6_ct6f8"]
[ext_resource type="PackedScene" uid="uid://3se37hf2b3nl" path="res://damage_flash_player.tscn" id="7_mnp15"]
[ext_resource type="Script" path="res://hitbox_component.gd" id="8_gptsw"]
[ext_resource type="PackedScene" uid="uid://b58vw44glay4i" path="res://Environment/move_trail.tscn" id="9_r5gar"]
[ext_resource type="Texture2D" uid="uid://cfy8mw22pj3df" path="res://Assets/Free Smoke Fx  Pixel 06.png" id="10_ej3mu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wrke3"]
resource_local_to_scene = true
shader = ExtResource("5_qf84c")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h40vo"]
size = Vector2(92, 86)

[sub_resource type="Curve" id="Curve_j88iw"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_43wja"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_2j7i3"]
atlas = ExtResource("10_ej3mu")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hopx"]
atlas = ExtResource("10_ej3mu")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj8r"]
atlas = ExtResource("10_ej3mu")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmbok"]
atlas = ExtResource("10_ej3mu")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_417yc"]
atlas = ExtResource("10_ej3mu")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypbpc"]
atlas = ExtResource("10_ej3mu")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_46qcl"]
atlas = ExtResource("10_ej3mu")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti5em"]
atlas = ExtResource("10_ej3mu")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0kt6"]
atlas = ExtResource("10_ej3mu")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_siugg"]
atlas = ExtResource("10_ej3mu")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_imkjl"]
atlas = ExtResource("10_ej3mu")
region = Rect2(640, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d4up"]
atlas = ExtResource("10_ej3mu")
region = Rect2(704, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_71adn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j7i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hopx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etj8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmbok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_417yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypbpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46qcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti5em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0kt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imkjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d4up")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}]

[node name="Bounty" type="CharacterBody2D" node_paths=PackedStringArray("laser_timer", "health_component", "stats", "health_bar", "body") groups=["Bounty"]]
collision_mask = 2
script = ExtResource("1_3wpkc")
laser_timer = NodePath("LaserTimer")
health_component = NodePath("HealthComponent")
stats = NodePath("EnemyStats")
health_bar = NodePath("HealthBar")
body = NodePath("Body")

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_bar", "damage_flash_player")]
script = ExtResource("2_wqkl3")
health_bar = NodePath("../HealthBar")
possesor = "Enemy"
damage_flash_player = NodePath("../Body/Sprite/DamageFlashPlayer")

[node name="HealthBar" parent="." instance=ExtResource("3_ut44i")]
offset_left = -80.0
offset_top = -77.0
offset_right = 81.0
offset_bottom = -57.0

[node name="EnemyStats" parent="." instance=ExtResource("4_yq3dr")]

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Body"]
material = SubResource("ShaderMaterial_wrke3")
rotation = 1.5708
scale = Vector2(2.82043, 2.82043)
texture = ExtResource("6_ct6f8")

[node name="DamageFlashPlayer" parent="Body/Sprite" instance=ExtResource("7_mnp15")]

[node name="HitboxComponent" type="Area2D" parent="Body" node_paths=PackedStringArray("health_component")]
collision_mask = 2
script = ExtResource("8_gptsw")
health_component = NodePath("../../HealthComponent")
possesor = "Enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitboxComponent"]
position = Vector2(-3, 3)
shape = SubResource("RectangleShape2D_h40vo")

[node name="Timer" type="Timer" parent="Body/HitboxComponent"]

[node name="LeftWing" type="Node2D" parent="Body"]
position = Vector2(-43, -38)

[node name="MoveTrail" parent="Body/LeftWing" instance=ExtResource("9_r5gar")]
z_index = -1
width_curve = SubResource("Curve_j88iw")
length = 20

[node name="RightWing" type="Node2D" parent="Body"]
position = Vector2(-43, 38)

[node name="MoveTrail" parent="Body/RightWing" instance=ExtResource("9_r5gar")]
z_index = -1
width_curve = SubResource("Curve_43wja")
length = 20

[node name="Death" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_71adn")
animation = &"death"

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Body/HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
